manifests/namespaces/lighthouse/deployment-lighthouse-foghorn.yaml
---
# Source: lighthouse/templates/foghorn-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: lighthouse
  name: lighthouse-foghorn
  labels:
    draft: draft-app
    chart: "lighthouse-0.0.922"
    app: lighthouse-foghorn
spec:
  replicas: 1
  selector:
    matchLabels:
      draft: draft-app
      app: lighthouse-foghorn
  template:
    metadata:
      labels:
        draft: draft-app
        app: lighthouse-foghorn
    spec:
      serviceAccountName: lighthouse-foghorn
      containers:
        - name: lighthouse-foghorn
          image: gcr.io/jenkinsxio/lighthouse-foghorn:0.0.922
          imagePullPolicy: IfNotPresent
          args:
            - "--namespace=lighthouse"
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
            requests:
              cpu: 80m
              memory: 128Mi
      terminationGracePeriodSeconds: 180
