manifests/namespaces/lighthouse/deployment-lighthouse-keeper.yaml
---
# Source: lighthouse/templates/keeper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: lighthouse
  name: lighthouse-keeper
  labels:
    chart: "lighthouse-0.0.936"
    app: lighthouse-keeper
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: lighthouse-keeper
  template:
    metadata:
      annotations:
        ad.datadoghq.com/keeper.logs: '[{"source":"lighthouse","service":"keeper"}]'
      labels:
        app: lighthouse-keeper
    spec:
      serviceAccountName: lighthouse-keeper
      terminationGracePeriodSeconds: 30
      containers:
        - name: lighthouse-keeper
          image: gcr.io/jenkinsxio/lighthouse-keeper:0.0.936
          imagePullPolicy: IfNotPresent
          args:
            - "--namespace=lighthouse"
          ports:
            - name: http
              containerPort: 8888
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 120
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
