manifests/namespaces/lighthouse/service-hook.yaml
---
# Source: lighthouse/templates/webhooks-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: lighthouse
  name: hook
  labels:
    chart: "lighthouse-0.0.922"
  annotations: {}
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: lighthouse-webhooks
