manifests/namespaces/lighthouse/service-lighthouse-keeper.yaml
---
# Source: lighthouse/templates/keeper-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: lighthouse
  name: lighthouse-keeper
spec:
  type: ClusterIP
  selector:
    app: lighthouse-keeper
  ports:
    - port: 80
      targetPort: 8888
      protocol: TCP
      name: http
