manifests/namespaces/lighthouse/service-lighthouse-tekton-controller.yaml
---
# Source: lighthouse/templates/tekton-controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: lighthouse
  name: lighthouse-tekton-controller
  labels:
    chart: "lighthouse-0.0.939"
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: metrics
      protocol: TCP
      name: metrics
  selector:
    app: lighthouse-tekton-controller
